--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ data/
 !publication/markdown/templates/report-template.docx
 !publication/markdown/templates/summary-template.docx
 !management-report/markdown/phs-logo.png
+!dashboard/www/phs-logo.png
